Added client processing of server initiated messages
 * JS/Browser side
   * Moved the initial UI creation from body onload to document.ready
   * Changed params for creating ToddlerClock objects to be an object
   * Added a message_process_map param for handling server side messages
   * Made WebsocketHelper more robust with reconnects
   * Fixed some race conditions when switching ToddlerClock modes
   * Created updateIntervalUI for updating the interval bits of the UI
   * Allow initializeState to accept data as an arg
 * Server side
   * Send the initial state of the clock on websocket open
   * Send websocket events when the config/state of the clock changes
   * Try and catch more possible WebSocketError exceptions

--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
 <script src="/static/js/toddleglow.js"></script>
 
 </head>
-<body onload="initializeState()">
+<body>
 
 
 <div id="main_div" class="container">
