Added logging to the server and fixed UI bugs
 * Server Changes:
    * Now with logging!
    * Made timezone configurable, but defaults to US/Mountain
 * UI Changes:
    * Added a switch for changing the API mode of the UI
    * UI synchronization fixes to prevent api mode switching conflicting
    * Fixed UI bug with new intervals updating the UI from JS instead of
    * API response
    * Fixed UI bug when override intervals check wasn't triggering an
    * API event

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,20 @@
 </head>
 <body>
 
-
+<div id="api_mode" class="container">
+    <h4>API Mode:</h4>
+    <div class="container">
+    <strong>Rest</strong> <input id="api_mode_toggle" type="checkbox" data-toggle="toggle"> <strong>Websocket</strong>
+    </div>
+    <script>
+        $('#api_mode_toggle').bootstrapToggle({
+            on: 'Websocket',
+            off: 'Rest',
+            onstyle: "default",
+            offstyle: "default"
+        });
+    </script>
+</div>
 <div id="main_div" class="container">
     <h2>Toddler Glow Clock</h2>
     <div class="panel-group" id="config_accordion"></div>
