New UI elements and fixes
New
 * Screen mode toggle (Not fully pumbed yet)
 * Added cur_states global var to keep track of current states of all UI
 * Modify callbacks etc... to update new global cur_states variable
(Tested with websockets, need to test in Rest mode)
 * New blendColors function

Fixes
 * Brightness slider wasn't hiding or showing up when another browser
client checked the Override Intervals box

--- a/static/index.html
+++ b/static/index.html
@@ -32,25 +32,36 @@
 <script src="/static/js/toddleglow.js"></script>
 
 </head>
-<body>
+<body id="body">
 
-<div id="api_mode" class="container">
-    <h4>API Mode:</h4>
-    <div class="container">
-    <strong>Rest</strong> <input id="api_mode_toggle" type="checkbox" data-toggle="toggle"> <strong>Websocket</strong>
-    </div>
-    <script>
-        $('#api_mode_toggle').bootstrapToggle({
-            on: 'Websocket',
-            off: 'Rest',
-            onstyle: "default",
-            offstyle: "default"
-        });
-    </script>
-</div>
 <div id="main_div" class="container">
-    <h2>Toddler Glow Clock</h2>
-    <div class="panel-group" id="config_accordion"></div>
+    <div id="top" class="row">
+        <div class="col-xs-8">
+            <h4>Screen Mode:</h4>
+            <input id="screen_mode_toggle" type="checkbox" data-toggle="toggle">
+        </div>
+        <div id="api_mode_toggle_div" class="col-xs-4">
+            <h4>API Mode:</h4>
+            <input id="api_mode_toggle" type="checkbox" data-toggle="toggle data-size="mini">
+        </div>
+        <script>
+            $('#api_mode_toggle').bootstrapToggle({
+                on: 'Websocket',
+                off: 'Rest',
+                onstyle: "default",
+                offstyle: "default"
+            });
+            $('#screen_mode_toggle').bootstrapToggle({
+                on: 'On',
+                off: 'Off',
+                onstyle: "default",
+                offstyle: "default"
+            });
+        </script>
+    </div>
+    <div class="panel-group" id="config_accordion">
+        <h2>Toddler Glow Clock</h2>
+    </div>
 </div>
 
 
