Add basic color mixing for new Screen Light Mode

--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
 <div id="main_div" class="container">
     <div id="top" class="row">
         <div class="col-xs-8">
-            <h4>Screen Mode:</h4>
+            <h4>Screen Light:</h4>
             <input id="screen_mode_toggle" type="checkbox" data-toggle="toggle">
         </div>
         <div id="api_mode_toggle_div" class="col-xs-4">
